--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -255,40 +255,18 @@ script.
 
 		$('body').on('click', '.js-load-next-page', function(e){
 			e.preventDefault();
-			var nextPage = $(this).data('next-page');
 
 			//- Remove button and its container.
 			$(this).parent().remove();
 
-			fetchPosts({
-				'sorting': $sortingDropDown.value,
-				'page': $(this).data('next-page')
-			}, true);
+			let queryString = buildQueryString();
+			queryString['page'] = $(this).data('next-page');
+
+			fetchPosts(queryString, true);
 		});
-
-		{#
-		function fetchPostsNextPage(){
-			var nextPage = $('#col_main').data('next-page');
-
-			fetchPosts({
-				'sorting': $sortingDropDown.value,
-				'page': nextPage
-			}, true);
-		}
-
-		$( "#col_main" ).scroll(function() {
-			//visible height + pixel scrolled = total height
-			if(this.offsetHeight + this.scrollTop === this.scrollHeight){
-				//- Once the end of the page is reached, move one pixel up to avoid
-				//- getting stuck loading multiple times.
-				//- TODO(pablo) find a nicer way to avoid this.
-				this.scrollTop = this.scrollTop - 1;
-				fetchPostsNextPage();
-			};
-		});
-		#}
 
 		function buildQueryString() {
+			//- Build a query string based on the current status of the filters in the UI
 			//- Define the base query
 			var queryString = {'sorting': $sortingDropDown.val()}
 			//- Get all query string filter values (filter_tags, filter_status_dev, etc)
