UI: Minor CSS fixes.

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -109,6 +109,11 @@
     width: auto !important
     min-width: 80px
 
-.list-facet.tags
-  .select2-container
-    min-width: 160px
+.list-facet
+  &.tags
+    .select2-container
+      min-width: 160px
+
+  &.status_dev
+    .select2-container
+      min-width: 160px
