--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -10,7 +10,7 @@
   background-color: $color-background-dark
   height: 100vh
   min-width: 48px
-  overflow: hidden auto
+  overflow-y: auto
 
 #app-content
   flex: 1
