--- a/src/styles/_input_select.sass
+++ b/src/styles/_input_select.sass
@@ -1,5 +1,14 @@
 .select2-container
 	background-color: $color-background-light
+	border-radius: $border-radius
+
+.select2-selection:hover,
+.select2-container--default .select2-selection--single:hover
+		border-radius: $border-radius
+
+.select2-container--below.select2-container--open
+	border-bottom-left-radius: 0 !important
+	border-bottom-right-radius: 0 !important
 
 .select2-selection,
 .select2-container--default .select2-selection--single
@@ -10,3 +19,8 @@
 
 .select2-results__option
 	+text-overflow-ellipsis
+
+
+.select2-container--default .select2-results>.select2-results__options
+	font-size: .9em
+	max-height: 350px
