--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -1,6 +1,3 @@
-#list-hits
-  margin: 0
-
 .list-hits-item
   +clearfix
   +media-xs
@@ -13,41 +10,18 @@
   border-radius: $border-radius * 2
   box-shadow: 1px 2px 2px rgba(black, .1)
   cursor: pointer
-  display: flex
   flex-direction: row-reverse
-  margin: 8px 12px 8px
   position: relative
   transition: background-color 150ms ease-in-out, box-shadow 250ms ease-in-out
 
   &:hover
     background-color: $color-background-lighter
 
-  // Triangle on the right
-  &:after
-    +media-xs
-      display: none
-    opacity: 0
-    right: -8px
-    transition: opacity 300ms ease-in-out, right 300ms ease-in-out
-    transition-delay: 50ms
-
   &.active
     +media-xs
       background-color: $color-background-dark
     background-color: $color-background-dark
     // box-shadow: -5px 0 inset var(--community-theme-color, $color-primary)
-
-    // Triangle on the right
-    &:after
-      content: ''
-      border: 8px solid transparent
-      border-left-color: var(--community-theme-color, $color-primary)
-      border-radius: 3px
-      position: absolute
-      top: 50%
-      transform: translateY(-50%)
-      right: -12px
-      opacity: 1
 
     .item-title
       color: var(--community-theme-color, $color-primary)
@@ -109,6 +83,7 @@
     width: auto !important
     min-width: 80px
 
+$select-min-width: 160px
 .list-facet
   &.tags
     .select2-container
@@ -116,4 +91,8 @@
 
   &.status_dev
     .select2-container
+      +media-lg
+        min-width: 180px
+      +media-sm
+        min-width: 140px
       min-width: 160px
