--- a/src/styles/_widgets.sass
+++ b/src/styles/_widgets.sass
@@ -134,24 +134,23 @@ select, textarea, input
 
   .wgt-search-icon
     position: absolute
-    right: 15px
+    right: 20px
     top: 6px
-    color: $color-text-hint
+    color: rgba($color-text, .8)
 
   input
     +media-xs
       width: 100px
-    background-color: $color-background-lighter
-    border: none
-    border-radius: 3px
-    box-shadow: inset 0 0 0 1px $color-background-dark
+    border: 1px solid rgba($color-text, .8)
+    background-color: rgba($color-background-light, .5)
+    border-radius: $border-radius
     float: right
     margin: 0 10px
     padding: 6px 10px
-    width: 120px
+    min-width: 120px
 
     &::placeholder
-      color: $color-text-hint
+      color: rgba($color-text, .8)
 
 
 .wgt-toggle-fullscreen
