--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -97,72 +97,25 @@ $item-thumbnail-size: 90px
 
 .item-thumbnail
   +media-xs
-    border-radius: 0
     min-width: $item-thumbnail-size / 1.2
     max-width: $item-thumbnail-size / 1.2
 
   align-items: center
-  border-bottom-right-radius: $border-radius * 2
-  border-top-right-radius: $border-radius * 2
+  background-color: $color-background
+  border-radius: $border-radius * 2
   display: flex
   justify-content: center
   max-width: $item-thumbnail-size
   min-width: $item-thumbnail-size
-  min-height: 70px
+  min-height: 80px
   overflow: hidden
   position: relative
   transition: margin-right 150ms ease-in
 
-  &.has-thumbnail
-    +media-xs
-      margin: 0
-
-      .item-thumbnail-picture
-        display: block
-        height: 100%
-        position: initial
-        width: 100%
-
-        img
-          height: 100%
-          max-height: initial
-          object-fit: cover
-          width: 100%
-
-    .item-thumbnail-picture
-      &::before
-        display: none
-
-  &.is-link
-    .item-thumbnail-picture
-      &::before
-        content: '\e870'
-        background-image: linear-gradient(45deg, $color-type-link, lighten($color-type-link, 8%))
-
-  .item-thumbnail-picture
-    align-items: center
-    bottom: 0
-    display: flex
+  img
+    +position-center-translate
     height: 100%
-    justify-content: center
-    position: absolute
-    top: 0
-
-    &::before
-      align-items: center
-      background-image: linear-gradient(45deg, $color-type-text, lighten($color-type-text, 8%))
-      border-radius: 50%
-      color: $color-background-light
-      content: '\e861'
-      display: flex
-      font-family: 'pillar-font'
-      font-size: 1.2em
-      height: $item-thumbnail-size / 2
-      justify-content: center
-      width: $item-thumbnail-size / 2
-
-    img
-      object-fit: cover
+    object-fit: cover
 
 .item-content
   flex: 1
@@ -175,6 +128,7 @@ $item-thumbnail-size: 90px
   &.rated.positive .up,
   &.rated.negative .down
     color: var(--community-theme-color, $color-primary)
+
 
 .item-rating
   +media-xs
@@ -267,6 +221,7 @@ $item-thumbnail-size: 90px
 
   &-header
     color: $color-text-dark-secondary
+
 
 .item-info
   &-panel
