--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -63,7 +63,7 @@
 					| {% endif %}
 				| {% endif %}
 
-				//- TODO: Make tags clickeable.
+				//- TODO: Make tags clickable.
 				| {% if node.properties.tags %}
 				li#item-tags
 					| {% for tag in node.properties.tags %}
