--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -86,6 +86,18 @@
 			| {% else %}
 			p {{ _('Write something nice.') }}
 			| {% endif %}
+	//- Display Additional properties (for example download)
+	| {% if 'download' in node.properties %}
+	a(href="{{ url_for('posts.download_file', post_id=node._id, file_id=node.properties.download) }}") Download
+	| {% endif %}
+	| {% if 'downloads_total' in node.properties %}
+	p Total Downloads {{ node.properties.downloads_total }}
+	| {% endif %}
+	| {% if 'downloads_latest' in node.properties %}
+	p Downloads since last update {{ node.properties.downloads_latest }}
+	| {% endif %}
+
+
 	| {% endif %}
 
 
