--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -82,7 +82,7 @@
 	.item-body.px-5.pt-4.pb-3#item-content
 		.item-body-text
 			| {% if is_html %}
-			| {{ node.properties.content_html }}
+			| {{ node.properties | markdowned('content') }}
 			| {% else %}
 			p {{ _('Write something nice.') }}
 			| {% endif %}
