--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -53,15 +53,14 @@
 
 .cards-display
   .list-hits-item
-    flex-direction: column
+    flex-direction: column-reverse
 
     .item-thumbnail
       background-color: $color-background-light
-      border-bottom-left-radius: 0
-      border-bottom-right-radius: 0
+      border-top-left-radius: 0
+      border-top-right-radius: 0
       max-width: unset
       max-height: 500px
-      margin: 0 !important // overrides .m-2 class.
 
       img
         height: unset
