--- a/src/styles/_widgets.sass
+++ b/src/styles/_widgets.sass
@@ -48,6 +48,16 @@
     &.post
       border-radius: 5px !important
 
+  &.wgt
+    background-color: $color-background-light
+    border: none
+    border-radius: $border-radius * 2
+
+  &.btn-icon-only
+    padding: 4px 8px
+    i
+      margin: 0
+
 .btn-group
   align-items: center
   border-radius: 3px
