--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -65,8 +65,10 @@ li
 				option(value="hot", selected) {{ _('Hot') }}
 				option(value="new") {{ _('New') }}
 				option(value="top") {{ _('Top') }}
-			button.wgt-display-mode-toggle.btn
-				i.pi-layout.m-0
+
+			button.wgt-display-mode-toggle.btn.wgt.btn-icon-only(
+				title="Toggle Display Mode")
+				i.pi-layout
 
 	#list-hits
 		.d-flex.justify-content-center.p-5
