--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -153,7 +153,7 @@
 						span.ml-1(title="Karma")
 							| ({{ node.user.extension_props_public.dillo.karma }})
 
-					| {{ node.user.badges.html|safe }}
+					| {{ node.user.badges.html | safe }}
 
 				.op-meta
 					| {% if node.user.extension_props_public.dillo.links %}
@@ -207,6 +207,7 @@ script.
 
 	var context = ProjectUtils.context();
 
+	//- Load comments if we are not editing the post.
 	if (context != 'post-edit'){
 		new Vue({el: '#comments-embed'});
 	}
