Fix HTML not being rendered on posts anymore.
Emoji parsing was using text instead of html, because we were serving pure html
before we couldn't tell. Now that HTML is done via the "markdowned" filter
it, emoji needs html. This emoji parsing needs cleaning as it is a bit all over
the place now, added it to my to-do.

Fixes #101

--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -225,7 +225,7 @@ script.
 
 	{% if not is_link %}
 		var item_content = $('#item-content');
-		item_content.html(twemoji.parse(item_content.text()));
+		item_content.html(twemoji.parse(item_content.html()));
 	{% endif %}
 
 	// If the parameter ?fs is in the url, go imax!
