UI: Dim voting arrows for own posts.

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -132,6 +132,7 @@ $item-thumbnail-size: 90px
     padding: 3px 0
 
   background-color: $color-background
+  cursor: default
   display: flex
   align-items: center
   justify-content: center
@@ -710,7 +711,7 @@ body[data-context="post-edit"]
     .item-rating
       &.up, &.down
         pointer-events: none
-        color: rgba($color-text-dark-hint, .6)
+        color: rgba($color-text-dark-hint, .1)
 
   .item-content
     background-color: $color-background-dark
