--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -59,6 +59,7 @@
       background-color: $color-background-light
       border-top-left-radius: 0
       border-top-right-radius: 0
+      margin: 0
       max-width: unset
       max-height: 500px
 
