--- a/src/templates/dillo/user.pug
+++ b/src/templates/dillo/user.pug
@@ -31,18 +31,15 @@
 		| {% set custom_status = post.properties.status_dev %}
 		| {% endif %}
 
-		.list-hits-item(
+		.list-hits-item.d-flex.mx-1.my-2(
 			class="js-item-open {% if custom_status %}{{ custom_status }}{% endif %}",
 			id="item-{{ post._id }}",
 			data-id="{{ post._id }}",
 			data-url="{{ post_url }}")
-			a.item-thumbnail(
-				href="{{ post_url }}",
-				class="{% if post.picture %}has-thumbnail{% endif %} {% if is_link %}is-link{% endif %}")
-				.item-thumbnail-picture
-					| {% if post.picture %}
-					img(src="{{ post.picture.thumbnail('m') }}")
-					| {% endif %}
+			| {% if post.picture %}
+			a.item-thumbnail.m-2(href="{{ post_url }}")
+				img(src="{{ post.picture.thumbnail('l') }}")
+			| {% endif %}
 
 			.item-content.d-flex.pb-1(data-node-id="{{ post._id }}")
 				.item-details.pl-3
