UI: Less round generic widget class.

--- a/src/styles/_widgets.sass
+++ b/src/styles/_widgets.sass
@@ -51,7 +51,7 @@
   &.wgt
     background-color: $color-background-light
     border: none
-    border-radius: $border-radius * 2
+    border-radius: $border-radius
 
   &.btn-icon-only
     padding: 4px 8px
