UI: Dim posts marked as 'Duplicate'.

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -51,6 +51,18 @@
     &:before
       display: none
 
+  //- Status-dev styling in posts_list.
+  &.Duplicate
+    opacity: .5
+
+    ul *,
+    .item-thumbnail
+      display: none
+
+    &.active
+      opacity: unset
+
+
 .cards-display
   .list-hits-item
     flex-direction: column-reverse
