--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -175,12 +175,10 @@
       .item-title
         margin-right: 70px
 
-      .item-body,
-      .item-view-header
-        +media-xs
-          background-color: $color-background-lighter
-
       .item-body
+        +media-xs
+          padding-left: 25px !important
+          padding-right: 25px !important
         font-size: 16px
 
       .item-view
